--- a/dsptk/CMakeLists.txt
+++ b/dsptk/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Src Makelist
+# Library Makelist
 
 project(dsptk_lib)
 
@@ -6,3 +6,5 @@ add_library(dsptk STATIC
   dsptk.cpp
   dsptk.hpp
 )
+
+install(FILES dsptk.hpp DESTINATION include)
