--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,11 +4,12 @@ include_directories(${PROJECT_SOURCE_DIR})
 
 add_executable(
   dsptk_test
-  dsptk.test.cpp
+  "dsptk_test.cc"
 )
 target_link_libraries(
   dsptk_test
   GTest::gtest_main
+  GTest::gmock_main
   dsptk
 )
 
