--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,8 @@ project(dsptk
 	DESCRIPTION "A collection of DSP Tools - Just for learning purposes."
 )
 
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
+
 # GoogleTest requires at least C++14
 set(CMAKE_CXX_STANDARD 14)
 
