Added DC blocker

--- a/dsptk/CMakeLists.txt
+++ b/dsptk/CMakeLists.txt
@@ -8,8 +8,11 @@ add_library(dsptk STATIC
 	"dynamics.h" 
 	"dynamics.cc" 
 	"conversions.h"
+	"filters.h" 
+	"filters.cc"
+	"constants.h"
 )
 
 install(FILES 
-	"detector.h" "dynamics.h" "conversions.h" DESTINATION include
+	"detector.h" "dynamics.h" "conversions.h" "filters.h" "constants.h" DESTINATION include
 )
