Added convolution and dft routines just for coding practice.

--- a/dsptk/CMakeLists.txt
+++ b/dsptk/CMakeLists.txt
@@ -11,8 +11,10 @@ add_library(dsptk STATIC
 	"filters.h" 
 	"filters.cc"
 	"constants.h"
-)
+	"convolution.h"
+	"convolution.cc"
+ "dft.h" "dft.cc")
 
 install(FILES 
-	"detector.h" "dynamics.h" "conversions.h" "filters.h" "constants.h" DESTINATION include
+	"detector.h" "dynamics.h" "conversions.h" "filters.h" "constants.h" "convolution.h" "dft.h" DESTINATION include
 )
