Added single pole recursive filters.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,7 @@ add_executable(
   "detector_test.cc"
   "convolution_test.cc"
   "dft_test.cc"
+  "filters_test.cc"
 )
 target_link_libraries(
   dsptk_test
