--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,5 +1,22 @@
 # Tests Makelist
 
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  GIT_REPOSITORY https://github.com/google/googletest.git
+  #GIT_TAG        b796f7d44681514f58a683a3a71ff17c94edb0c1 # v1.13.0
+  GIT_TAG        v1.13.0 # v1.13.0 <- probar con esto
+)
+# For Windows: Prevent overriding the parent project's compiler/linker settings
+set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+# So that GoogleTest does not get installed with this project
+option(INSTALL_GTEST "Enable installation of googletest." OFF)
+
+FetchContent_MakeAvailable(googletest)
+add_library(GTest::GTest INTERFACE IMPORTED)
+target_link_libraries(GTest::GTest INTERFACE gtest_main)
+
 include_directories(${PROJECT_SOURCE_DIR})
 
 add_executable(
@@ -19,4 +36,4 @@ target_link_libraries(
 
 
 include(GoogleTest)
-gtest_discover_tests(dsptk_test)
+gtest_discover_tests(dsptk_test DISCOVERY_MODE PRE_TEST)
